{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 397,
  "lineage": "49c46754-6e87-718d-6e65-d7da398adc1b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041529e45aa84df56",
            "arn": "arn:aws:ec2:us-east-1:273873396060:elastic-ip/eipalloc-041529e45aa84df56",
            "association_id": "eipassoc-083c3e4d5019a21d6",
            "domain": "vpc",
            "id": "eipalloc-041529e45aa84df56",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09ec0f450b28e8e52",
            "private_dns": "ip-10-0-1-211.ec2.internal",
            "private_ip": "10.0.1.211",
            "public_dns": "ec2-44-206-96-113.compute-1.amazonaws.com",
            "public_ip": "44.206.96.113",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "RDS-eip"
            },
            "tags_all": {
              "Name": "RDS-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-normal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:273873396060:instance/i-09f3ce6ac80f88ece",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f3ce6ac80f88ece",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "example-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06638b7ceb1f81b9e",
            "private_dns": "ip-10-0-1-90.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.90",
            "public_dns": "ec2-13-223-99-141.compute-1.amazonaws.com",
            "public_ip": "13.223.99.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0032bc12e8485f832",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-07105466b032ab48c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb614d8e257cc9ea",
            "tags": {
              "Name": "EC2"
            },
            "tags_all": {
              "Name": "EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07105466b032ab48c"
            ]
          },
          "dependencies": [
            "aws_key_pair.example",
            "aws_security_group.SG",
            "aws_subnet.Pub-subnet",
            "aws_vpc.RDS-VPC",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273873396060:internet-gateway/igw-0d0d6b5af5cc9f87b",
            "id": "igw-0d0d6b5af5cc9f87b",
            "owner_id": "273873396060",
            "tags": {
              "Name": "Internet-gtw1"
            },
            "tags_all": {
              "Name": "Internet-gtw1"
            },
            "vpc_id": "vpc-0ed7c270413bb1863"
          },
          "dependencies": [
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041529e45aa84df56",
            "association_id": "eipassoc-083c3e4d5019a21d6",
            "connectivity_type": "public",
            "id": "nat-0de55322a21c48971",
            "network_interface_id": "eni-09ec0f450b28e8e52",
            "private_ip": "10.0.1.211",
            "public_ip": "44.206.96.113",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bb614d8e257cc9ea",
            "tags": {
              "Name": "Nat-Gateway"
            },
            "tags_all": {
              "Name": "Nat-Gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.internet-gtw",
            "aws_subnet.Pub-subnet",
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273873396060:route-table/rtb-07f853e8341e9903e",
            "id": "rtb-07f853e8341e9903e",
            "owner_id": "273873396060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0de55322a21c48971",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-RT"
            },
            "tags_all": {
              "Name": "Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed7c270413bb1863"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.internet-gtw",
            "aws_nat_gateway.NAT-gtw",
            "aws_subnet.Pub-subnet",
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273873396060:route-table/rtb-0c9cae46696603686",
            "id": "rtb-0c9cae46696603686",
            "owner_id": "273873396060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d0d6b5af5cc9f87b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT"
            },
            "tags_all": {
              "Name": "Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed7c270413bb1863"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gtw",
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Pub-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030e72bedf16e2268",
            "route_table_id": "rtb-0c9cae46696603686",
            "subnet_id": "subnet-0bb614d8e257cc9ea"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gtw",
            "aws_route_table.Public-RT",
            "aws_subnet.Pub-subnet",
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08424ee3959879610",
            "route_table_id": "rtb-07f853e8341e9903e",
            "subnet_id": "subnet-0aecbec28a151ddac"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.internet-gtw",
            "aws_nat_gateway.NAT-gtw",
            "aws_route_table.Private-RT",
            "aws_subnet.Private-subnet1",
            "aws_subnet.Pub-subnet",
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af70eb41726eaa03",
            "route_table_id": "rtb-07f853e8341e9903e",
            "subnet_id": "subnet-01afb5b08cc222c97"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.internet-gtw",
            "aws_nat_gateway.NAT-gtw",
            "aws_route_table.Private-RT",
            "aws_subnet.Private-subnet2",
            "aws_subnet.Pub-subnet",
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273873396060:security-group/sg-07105466b032ab48c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07105466b032ab48c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250828032133847700000001",
            "name_prefix": "terraform-",
            "owner_id": "273873396060",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-grp"
            },
            "tags_all": {
              "Name": "security-grp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed7c270413bb1863"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273873396060:security-group/sg-074c56e612dd28667",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074c56e612dd28667",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL from EC2 SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07105466b032ab48c"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20250828032139639200000004",
            "name_prefix": "terraform-",
            "owner_id": "273873396060",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-grp-rds"
            },
            "tags_all": {
              "Name": "security-grp-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed7c270413bb1863"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG",
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273873396060:subnet/subnet-0aecbec28a151ddac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aecbec28a151ddac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "273873396060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-subnet1"
            },
            "tags_all": {
              "Name": "Private-subnet1"
            },
            "vpc_id": "vpc-0ed7c270413bb1863"
          },
          "dependencies": [
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273873396060:subnet/subnet-01afb5b08cc222c97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01afb5b08cc222c97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "273873396060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-subnet2"
            },
            "tags_all": {
              "Name": "Private-subnet2"
            },
            "vpc_id": "vpc-0ed7c270413bb1863"
          },
          "dependencies": [
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pub-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273873396060:subnet/subnet-0bb614d8e257cc9ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb614d8e257cc9ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "273873396060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-subnet"
            },
            "tags_all": {
              "Name": "Public-subnet"
            },
            "vpc_id": "vpc-0ed7c270413bb1863"
          },
          "dependencies": [
            "aws_vpc.RDS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "RDS-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:273873396060:vpc/vpc-0ed7c270413bb1863",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c872b34cfa3af17e",
            "default_route_table_id": "rtb-025e130345fd64609",
            "default_security_group_id": "sg-071434ae2933f55f6",
            "dhcp_options_id": "dopt-0ab4d66f243653dcc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed7c270413bb1863",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-025e130345fd64609",
            "owner_id": "273873396060",
            "tags": {
              "Name": "RDS-VPC"
            },
            "tags_all": {
              "Name": "RDS-VPC"
            }
          }
        }
      ]
    }
  ]
}